# CLAWRION

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  bot.py  dashboard.html  deploy_modal.py  docker-compose.yml  entrypoint.sh  fish_speech_server.py  fish_speech_tts.py  modal_app.py  orpheus_tts.py  patch_torchaudio.py  pyproject.toml  requirements.txt  server.py  whisper_stt.py
