[project]
name = "modal-fish-s2-pro"
version = "0.3.0"
description = "Real-time voice AI agent: Pipecat + Whisper + Smart Turn + OpenRouter + Self-Hosted Fish S2 Pro"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[whisper,openrouter,daily,silero,local-smart-turn]>=0.0.70",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]
